# polytrend

./: .gitattributes  .gitignore  .pyinstaller_hooks.py  DAY 1: replicate view with React.txt  PolyTrend.spec  README.md  alg_v0.py  alg_v1.py  alg_v3.py  alg_v4.py  app.py  app_prompt_v0.md  compile_and_bundle  compile_bundle_linux  compile_bundle_mac  instructions.txt  issue:.md  main.py  main.spec  neuralnine.py  neuralnine_v1.py  old-reqs.txt  old-requirements.txt  package-lock.json  package.json  prompt_v0.md  pyproject.toml  pyrightconfig.json  readme-not-$.md  readme.md  requirements.txt  setup.py  sort_out_now.py  tasks.todo
.history/: DAY 1: replicate view with React_20240111094639.txt  README_20231114111529.md  README_20231117092449.md  README_20231117092709.md  README_20231117092809.md  main_20231117093200.py  main_20231117095124.py  requirements_20231117093657.txt  requirements_20231117094247.txt  requirements_20231117094252.txt  requirements_20231117094314.txt  unsorted_20231120152317.jsx
.history/polytrend-desktop-app/: vite.config_20231114111025.js
.history/polytrend-desktop-app/src/: App_20231114112556.jsx  App_20231114112602.jsx  App_20231114112703.jsx  App_20231114114821.jsx  App_20231114114847.jsx  App_20231114115133.jsx  App_20231114115455.css  App_20231114115517.css  App_20231114115624.jsx  App_20231114115703.jsx  App_20231114115810.jsx  App_20231114115846.css  App_20231114115929.css  App_20231114115936.css  App_20231114120027.css  App_20231114120034.css  App_20231114120103.css  App_20231114120134.jsx  App_20231114120200.css  App_20231114120215.css  App_20231114120216.css  App_20231114120224.css  App_20231116085803.css
.history/src/: App_20240116090532.jsx  App_20240116090706.jsx
.history/view/: gui_20231117093200_ui.py  gui_20231117095033_ui.py
assets/data/: base.csv  edge.csv  generate.py  prime_data.csv  sample_data.csv
assets/docs/: instructions.txt
data/: generate.py  sample_data.csv
docs/: README-v0.md  improve.md  testing.md  theory.md
docs/ancient-code/: optimized-polytrend.py
docs/deprecated/: normal_equation.py  np-alg.py  optimized-polytrend.py  victor-theorem-n-deg-seq.py
docs/deprecated/view/: gui_ui_old.py  new-file.py  original.py
docs/misc/: README-v0.md  README-v1.md  alg-prompt-v3.txt  improve.md  my-math-diff-tables.txt  np-alg.py  test-prompt-v3.txt
docs/misc/victor-theorem/: n-deg-seq.py
gui/: gui.py  gui.ui  gui_ui.py
log/: debug.txt  format.txt  starter.txt
polytrend-desktop-app/: .gitignore  index.html  package-lock.json  package.json
polytrend-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.jsx  lagrange.py  main.jsx  main.py  neuralnine.py  normal_equation.py  optimized-polytrend.py  polytrend.py  quadseq.py  removing-coeffs.py
src/ancient/: gui_ui.py
src/view/: gui.ui  gui_ui.py
tests/: gen.py  generate.py  generate_fixtures.py  polytest.py  ptest.py  sample_data.csv  test_main.py  test_polyfind.py  test_polygraph.py  test_read_main_data.py
tests/data/: generate.py  sample_data.csv
view/: gui.py  gui.ui
